--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,10 @@ server.port=8080
 app.jwtSecret=bezKoderSecretKey
 app.jwtExpirationMs=86400000
 app.bootstrap=false
+# Mail Properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pasca.eduard@gmail.com
+spring.mail.password=wgdmtotbyyghlmiq
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
