--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ app.bootstrap=false
 # Mail Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pasca.eduard@gmail.com
-spring.mail.password=wgdmtotbyyghlmiq
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
